Add support and chat section
Added support and chat section to the index.html file.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,19 @@
   <!-- Сопровождение / Чаты -->
   <button class="mini glow premium" data-go="support">
     <div class="mini__top"><span class="mini__pill">PRO</span></div>
+<!-- SUPPORT / CHATS -->
+<section class="screen" id="screen-support">
+  <section class="section">
+    <div class="section__head">
+      <h2>Сопровождение</h2>
+      <span class="muted">чаты / помощь</span>
+    </div>
+
+    <div class="glass" id="supportRoot"></div>
+
+    <div class="spacer"></div>
+  </section>
+</section>
 
     <div class="mini__icon">
       <svg viewBox="0 0 64 64" fill="none">
