Implement click event listener for buttons
Add click event listener to alert button actions.

--- a/index.html
+++ b/index.html
@@ -1237,5 +1237,13 @@
     })();
 
   </script>
+  <script>
+  document.addEventListener('click', (e) => {
+    const t = e.target.closest('button, a, [data-go], [data-tab]');
+    if (t) {
+      alert('CLICK OK: ' + (t.dataset.go || t.dataset.tab || t.id || t.className));
+    }
+  }, true);
+</script>
 </body>
 </html>
