Add script tag for app.js in index.html

--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
     /* ====== screens ====== */
     .screen{ display:none; }
     .screen.is-active{ display:block; }
+<script src="app.js"></script>
 
     /* ====== bottom nav ====== */
     .nav{
